fix library layout spacing

--- a/css/index.css
+++ b/css/index.css
@@ -40,11 +40,10 @@ header {
 }
 
 .swiper {
-    height: 100vh;
     margin-top: 200px;
+    height: 100vh;
     width: 100%;
     padding-top: 50px;
-    padding-bottom: 50px;
 }
 
 .swiper-slide {
@@ -53,6 +52,13 @@ header {
     width: 250px;
     height: auto;
     cursor: pointer;
+    text-align: center;
+}
+
+.swiper-item-text {
+    margin-top: 20px;
+    color: white;
+    font-size: x-large;
 }
 
 .swiper-item {
@@ -68,13 +74,17 @@ header {
     display: flex;
     flex-direction: column;
     gap: 200px;
+    margin-top: 200px;
 }
 
 .library_container1 {
     display: flex;
-    align-items: center;
     justify-content: center;
     gap: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+    text-align: center;
+    color: white;
 }
 
 .library_item_img {
